# rust-design-patterns

./: Cargo.toml  Readme.md
idioms/2-constructor/: Readme.md  example.rs
idioms/3-default-trait/: example.rs
idioms/4-collections-as-smart-pointers/: Readme.md
idioms/use-borrowed-types-for-arguments/: Readme.md  example.rs
