[package]
name = "rust-design-patterns"
version = "0.1.0"
edition = "2021"

[[bin]]
name= "1-use-borrowed-types-for-arguments"
path= "./idioms/1-use-borrowed-types-for-arguments/example.rs"

[[bin]]
name= "2-constructor"
path= "./idioms/2-constructor/example.rs"

[[bin]]
name= "3-default-trait"
path= "./idioms/3-default-trait/example.rs"

[dependencies]